# bbqPAINT

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_notebooks.yml  ci.yml
src/bbqpaint/: __init__.py
src/bbqpaint/analysis/: __init__.py  bispectrum.py  parameter_estimation.py  parameters.py  power_spectrum.py
src/bbqpaint/data/: generate_example_data.py
src/bbqpaint/examples/: 1_basic_simulation.ipynb  2_simulated_data.ipynb  3_experimental_data.ipynb  README.md  __init__.py
src/bbqpaint/examples/colab/: 1_basic_simulation.ipynb  2_simulated_data.ipynb  3_experimental_data.ipynb  README.md
src/bbqpaint/examples/raw/: 1_basic_simulation.py  2_simulated_data.py  3_experimental_data.py  README.md  build_notebooks.py
src/bbqpaint/simulation/: __init__.py  noise_models.py  parameters.py  trace_generator.py
src/bbqpaint/utils/: __init__.py  statistics.py  visualization.py
src/mcoast/: __init__.py
src/mcoast/analysis/: __init__.py  bispectrum.py  fitting.py  parameter_estimation.py  parameters.py  power_spectrum.py  spectral_analysis.py
src/mcoast/data/: experimental_data_example.csv  generate_example_data.py  intensityTrace_demo.txt  matlab_trace.csv
src/mcoast/examples/: 1_basic_simulation.ipynb  2_simulated_data.ipynb  2_simulated_data.py  3_experimental_data.ipynb  3_experimental_data.py  README.md  __init__.py  basic_simulation.py  build_notebooks.ipynb  experimental_data.py  parameter_estimation.py
src/mcoast/examples/colab/: 1_basic_simulation.ipynb  2_simulated_data.ipynb  3_experimental_data.ipynb  README.md  build_notebooks.ipynb
src/mcoast/examples/raw/: 1_basic_simulation.py  2_simulated_data.py  3_experimental_data.py  README.md  build_notebooks.py
src/mcoast/models/: __init__.py  bispectrum_theory.py  cumulants.py  power_spectrum.py
src/mcoast/simulation/: __init__.py  noise_models.py  parameters.py  state_machine.py  trace_generator.py
src/mcoast/utils/: __init__.py  preprocessing.py  statistics.py  visualization.py
tests/: test_fitting.py  test_parameter_estimation.py  test_parameters.py  test_power_spectrum.py  test_simulation.py  test_statistics.py  test_visualization.py
