[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbqpaint"
description = "Molecular counting from a single intensity trace"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "teunhuijben@hotmail.com", name = "Teun Huijben" },
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.20.0,<2.1",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=1.0.0",
    "jupytext>=1.14.0",
    "ipykernel>=6.0.0",
]
[tool.hatch.version]
path = "src/bbqpaint/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bbqpaint"]

[project.optional-dependencies]
dev = ["pytest>=6.0", "pre-commit>=3.0.0", "pytest-cov", "nbconvert>=6.0.0"]
all = ["bbqpaint[dev]"]

[project.urls]
homepage = "https://github.com/TeunHuijben/bbqPAINT"
repository = "https://github.com/TeunHuijben/bbqPAINT"
